--- a/website/src/content/docs/docs/howtos/Client Generation/04renaming.mdx
+++ b/website/src/content/docs/docs/howtos/Client Generation/04renaming.mdx
@@ -22,16 +22,16 @@ By default, any language code generator will assume the TYPESPEC name is the cli
 ```typespec title=main.tsp
 namespace PetStoreNamespace;
 
-@doc("This is the input I need")
+/** This is the input I need */
 @resource("input")
 model InputModel {
+  /** Id of this object */
   @key
-  @doc("Id of this object")
   @visibility("read")
   name: string;
 }
 
-@doc("Read my resource")
+/** Read my resource */
 op GetModel is ResourceRead<InputModel>;
 ```
 
