Update website/src/content/docs/docs/howtos/Generate client libraries/04renaming.mdx
Co-authored-by: catalinaperalta <catalinaperaltah@hotmail.com>

--- a/website/src/content/docs/docs/howtos/Generate client libraries/04renaming.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/04renaming.mdx
@@ -272,7 +272,8 @@ public final class PetStoreNamespaceClient {
 </TabItem>
 </Tabs>
 
-You cannot at this moment rename paramters in the client.tsp file.
+You cannot at this moment rename parameters in the client.tsp file. You will need to add the `@clientName` decorator over the parameter directly, example:
+
 
 ## Implementation
 
