Update website/src/content/docs/docs/howtos/Generate client libraries/04renaming.mdx
Co-authored-by: catalinaperalta <catalinaperaltah@hotmail.com>

--- a/website/src/content/docs/docs/howtos/Generate client libraries/04renaming.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/04renaming.mdx
@@ -196,7 +196,7 @@ public final class PetStoreNamespaceClient {
 
 ### Renaming operations and parameters
 
-Simillarly, you can rename operations like in the example below:
+Similarly, you can rename operations like in the example below:
 
 <Tabs>
 <TabItem value="typespec" label="TypeSpec" default>
