--- a/docs/howtos/Client Generation/09versioning.mdx
+++ b/docs/howtos/Client Generation/09versioning.mdx
@@ -258,9 +258,9 @@ serviceClientClient.stableFunctionality(stableModel);
 
 ### Override to a specific version
 
-You can override the signature to return the api surface area for a specific api version, this change is done in `tspconfig.yaml`.
+You can override the signature to return the api surface area for a specific api version.
 
-In this example, we are going to override to return the preview api surface area for our spec. The preview api surface area contains all of the functionality.
+In this example, you can see how this change is made in tspconfig.yaml, and we are going to override to return the preview api surface area for our spec. The preview api surface area contains all of the functionality.
 
 <Tabs>
 <TabItem value="tspconfig.yaml" label="tspconfig.yaml" default>
