--- a/website/src/content/docs/docs/howtos/Client Generation/09versioning.mdx
+++ b/website/src/content/docs/docs/howtos/Client Generation/09versioning.mdx
@@ -231,18 +231,18 @@ In this example, you can see how this change is made in tspconfig.yaml, and we a
 
 <ClientTabItem lang="typespec">
 
-```yaml
+```yaml title=tspconfig.yaml
 options:
-"@azure-tools/typespec-python":
-api-version: "2023-11-01-preview"
-"@azure-tools/typespec-csharp":
-api-version: "2023-11-01-preview"
-"@azure-tools/typespec-ts":
-api-version: "2023-11-01-preview"
-"@azure-tools/typespec-java":
-api-version: "2023-11-01-preview"
-"@azure-tools/typespec-go":
-api-version: "2023-11-01-preview"
+  "@azure-tools/typespec-python":
+  api-version: "2023-11-01-preview"
+  "@azure-tools/typespec-csharp":
+  api-version: "2023-11-01-preview"
+  "@azure-tools/typespec-ts":
+  api-version: "2023-11-01-preview"
+  "@azure-tools/typespec-java":
+  api-version: "2023-11-01-preview"
+  "@azure-tools/typespec-go":
+  api-version: "2023-11-01-preview"
 ```
 
 ```typespec
@@ -362,18 +362,18 @@ In the following examples, you can observe how this change is made in `tspconfig
 
 <ClientTabItem lang="typespec">
 
-```yaml
+```yaml title=tspconfig.yaml
 options:
-"@azure-tools/typespec-python":
-api-version: "all"
-"@azure-tools/typespec-csharp":
-api-version: "all"
-"@azure-tools/typespec-ts":
-api-version: "all"
-"@azure-tools/typespec-java":
-api-version: "all"
-"@azure-tools/typespec-go":
-api-version: "all"
+  "@azure-tools/typespec-python":
+  api-version: "2023-11-01-preview"
+  "@azure-tools/typespec-csharp":
+  api-version: "2023-11-01-preview"
+  "@azure-tools/typespec-ts":
+  api-version: "2023-11-01-preview"
+  "@azure-tools/typespec-java":
+  api-version: "2023-11-01-preview"
+  "@azure-tools/typespec-go":
+  api-version: "2023-11-01-preview"
 ```
 
 ```typespec
