doc(howto): update csharp sample of `@encode(string)`
a follow up of https://github.com/Azure/autorest.csharp/issues/4919

--- a/docs/howtos/Client Generation/06types.mdx
+++ b/docs/howtos/Client Generation/06types.mdx
@@ -2296,7 +2296,8 @@ serialized_prop = json.dumps(prop, cls=SdkJSONEncoder, format="rfc3339")
 <TabItem value="csharp" label="CSharp" >
 
 ```csharp
-TODO
+// Internal implementation
+utf8JsonWriter.WriteStringValue(Prop.ToString());
 ```
 
 </TabItem>
