Generate Azure.ResourceManager.CommonTypes v6 (#1689)
There are 3 common types that changed on this version:
https://github.com/Azure/azure-rest-api-specs/tree/main/specification/common-types/resource-management/v6
-
[managedidentity.json](https://github.com/Azure/azure-rest-api-specs/blob/main/specification/common-types/resource-management/v6/managedidentity.json)
-
[privatelinks.json](https://github.com/Azure/azure-rest-api-specs/blob/main/specification/common-types/resource-management/v6/privatelinks.json)
-
[types.json](https://github.com/Azure/azure-rest-api-specs/blob/main/specification/common-types/resource-management/v6/types.json)


issue: https://github.com/Azure/typespec-azure/issues/1028

--- a/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -210,10 +210,12 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`PrivateEndpoint`](./data-types.md#Azure.ResourceManager.CommonTypes.PrivateEndpoint)
 - [`PrivateEndpointConnection`](./data-types.md#Azure.ResourceManager.CommonTypes.PrivateEndpointConnection)
 - [`PrivateEndpointConnectionListResult`](./data-types.md#Azure.ResourceManager.CommonTypes.PrivateEndpointConnectionListResult)
+- [`PrivateEndpointConnectionListResultV5`](./data-types.md#Azure.ResourceManager.CommonTypes.PrivateEndpointConnectionListResultV5)
 - [`PrivateEndpointConnectionParameter`](./data-types.md#Azure.ResourceManager.CommonTypes.PrivateEndpointConnectionParameter)
 - [`PrivateEndpointConnectionProperties`](./data-types.md#Azure.ResourceManager.CommonTypes.PrivateEndpointConnectionProperties)
 - [`PrivateLinkResource`](./data-types.md#Azure.ResourceManager.CommonTypes.PrivateLinkResource)
 - [`PrivateLinkResourceListResult`](./data-types.md#Azure.ResourceManager.CommonTypes.PrivateLinkResourceListResult)
+- [`PrivateLinkResourceListResultV5`](./data-types.md#Azure.ResourceManager.CommonTypes.PrivateLinkResourceListResultV5)
 - [`PrivateLinkResourceParameter`](./data-types.md#Azure.ResourceManager.CommonTypes.PrivateLinkResourceParameter)
 - [`PrivateLinkResourceProperties`](./data-types.md#Azure.ResourceManager.CommonTypes.PrivateLinkResourceProperties)
 - [`PrivateLinkServiceConnectionState`](./data-types.md#Azure.ResourceManager.CommonTypes.PrivateLinkServiceConnectionState)
