--- a/website/src/content/docs/docs/howtos/Generate client libraries/03convenient.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/03convenient.mdx
@@ -68,12 +68,12 @@ const model: OutputModel = await client.path("/petStore/model/{name}").get();
 ```
 
 ```java
-package com.petstorenamespace.models;
+package petstorenamespace.models;
 public final class OutputModel {
     public String getName()
 }
 
-package com.petstorenamespace;
+package petstorenamespace;
 public final class PetStoreNamespaceClient {
     // protocol method
     public Response<BinaryData> getModelWithResponse(String name, RequestOptions requestOptions)
@@ -201,12 +201,12 @@ namespace PetStoreNamespace
 // Model class resides in implementation package.
 // Client method is package private.
 
-package com.petstorenamespace.implementation.models;
+package petstorenamespace.implementation.models;
 public final class OutputModel {
     public String getName()
 }
 
-package com.petstorenamespace;
+package petstorenamespace;
 public final class PetStoreNamespaceClient {
     // protocol method
     Response<BinaryData> getModelWithResponse(String name, RequestOptions requestOptions)
@@ -294,7 +294,7 @@ namespace Azure.AI.OpenAI.Models
 // If a model class is output-only, its constructor is not public.
 // Adding Usage.input to it would make its constructor public.
 
-package com.azure.ai.openai.models;
+package azure.openai.models;
 
 public final class AzureCognitiveSearchIndexFieldMappingOptions {
     public AzureCognitiveSearchIndexFieldMappingOptions()
