--- a/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
@@ -28,6 +28,10 @@ npm install --save-peer @azure-tools/typespec-client-generator-core
 </TabItem>
 </Tabs>
 
+## Emitter usage
+
+[See documentation](./emitter.md)
+
 ## Azure
 
 ## Azure.ClientGenerator
