doc(howto): update csharp sample of `@encode(string)` (#1859)
a follow up of https://github.com/Azure/autorest.csharp/issues/4919

Co-authored-by: Mingzhe Huang <mingzhehuang@microsoft.com>

--- a/website/src/content/docs/docs/howtos/Generate client libraries/06types.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/06types.mdx
@@ -2581,7 +2581,8 @@ serialized_prop = json.dumps(prop, cls=SdkJSONEncoder, format="rfc3339")
 <ClientTabItem lang="csharp" >
 
 ```csharp
-TODO
+// Internal implementation
+utf8JsonWriter.WriteStringValue(Prop.ToString());
 ```
 
 </ClientTabItem>
