--- a/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -35,6 +35,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 ### Decorators
 
 - [`@armCommonTypesVersion`](./decorators.md#@Azure.ResourceManager.armCommonTypesVersion)
+- [`@armCustomResource`](./decorators.md#@Azure.ResourceManager.armCustomResource)
 - [`@armLibraryNamespace`](./decorators.md#@Azure.ResourceManager.armLibraryNamespace)
 - [`@armProviderNamespace`](./decorators.md#@Azure.ResourceManager.armProviderNamespace)
 - [`@armProviderNameValue`](./decorators.md#@Azure.ResourceManager.armProviderNameValue)
