--- a/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -35,7 +35,6 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 ### Decorators
 
 - [`@armCommonTypesVersion`](./decorators.md#@Azure.ResourceManager.armCommonTypesVersion)
-- [`@armCustomResource`](./decorators.md#@Azure.ResourceManager.armCustomResource)
 - [`@armLibraryNamespace`](./decorators.md#@Azure.ResourceManager.armLibraryNamespace)
 - [`@armProviderNamespace`](./decorators.md#@Azure.ResourceManager.armProviderNamespace)
 - [`@armProviderNameValue`](./decorators.md#@Azure.ResourceManager.armProviderNameValue)
@@ -48,6 +47,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`@armResourceRead`](./decorators.md#@Azure.ResourceManager.armResourceRead)
 - [`@armResourceUpdate`](./decorators.md#@Azure.ResourceManager.armResourceUpdate)
 - [`@armVirtualResource`](./decorators.md#@Azure.ResourceManager.armVirtualResource)
+- [`@customAzureResource`](./decorators.md#@Azure.ResourceManager.customAzureResource)
 - [`@extensionResource`](./decorators.md#@Azure.ResourceManager.extensionResource)
 - [`@locationResource`](./decorators.md#@Azure.ResourceManager.locationResource)
 - [`@resourceBaseType`](./decorators.md#@Azure.ResourceManager.resourceBaseType)
