Summary of changes + documentation

--- a/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -47,7 +47,6 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`@armResourceRead`](./decorators.md#@Azure.ResourceManager.armResourceRead)
 - [`@armResourceUpdate`](./decorators.md#@Azure.ResourceManager.armResourceUpdate)
 - [`@armVirtualResource`](./decorators.md#@Azure.ResourceManager.armVirtualResource)
-- [`@customAzureResource`](./decorators.md#@Azure.ResourceManager.customAzureResource)
 - [`@extensionResource`](./decorators.md#@Azure.ResourceManager.extensionResource)
 - [`@locationResource`](./decorators.md#@Azure.ResourceManager.locationResource)
 - [`@resourceBaseType`](./decorators.md#@Azure.ResourceManager.resourceBaseType)
@@ -266,6 +265,10 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`TenantScope`](./data-types.md#Azure.ResourceManager.Foundations.TenantScope)
 
 ## Azure.ResourceManager.Legacy
+
+### Decorators
+
+- [`@customAzureResource`](./decorators.md#@Azure.ResourceManager.Legacy.customAzureResource)
 
 ### Models
 
