@@customeAzureResource decorator for resources that doesn't use the base resource types (#1923)
issue: https://github.com/Azure/typespec-azure/issues/1474

---------

Co-authored-by: Mark Cowlishaw <markcowl@microsoft.com>

--- a/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -266,6 +266,10 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 
 ## Azure.ResourceManager.Legacy
 
+### Decorators
+
+- [`@customAzureResource`](./decorators.md#@Azure.ResourceManager.Legacy.customAzureResource)
+
 ### Models
 
 - [`ManagedServiceIdentityV4`](./data-types.md#Azure.ResourceManager.Legacy.ManagedServiceIdentityV4)
