add isApiVersion getter

--- a/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
@@ -47,6 +47,7 @@ npm install --save-peer @azure-tools/typespec-client-generator-core
 - [`@clientNamespace`](./decorators.md#@Azure.ClientGenerator.Core.clientNamespace)
 - [`@convenientAPI`](./decorators.md#@Azure.ClientGenerator.Core.convenientAPI)
 - [`@flattenProperty`](./decorators.md#@Azure.ClientGenerator.Core.flattenProperty)
+- [`@isApiVersion`](./decorators.md#@Azure.ClientGenerator.Core.isApiVersion)
 - [`@operationGroup`](./decorators.md#@Azure.ClientGenerator.Core.operationGroup)
 - [`@override`](./decorators.md#@Azure.ClientGenerator.Core.override)
 - [`@paramAlias`](./decorators.md#@Azure.ClientGenerator.Core.paramAlias)
