--- a/website/src/content/docs/docs/howtos/Generate client libraries/00howtogen.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/00howtogen.mdx
@@ -29,7 +29,11 @@ Modify your `package.json` to include the necessary dependencies for the languag
     "@typespec/rest": "latest",
     "@typespec/http": "latest",
     "@azure-tools/typespec-azure-core": "latest",
-    "@azure-tools/typespec-python": "latest"
+    "@azure-tools/typespec-autorest": "latest",
+    "@azure-tools/typespec-python": "latest",
+    "@azure-tools/typespec-java": "latest",
+    "@azure-tools/typespec-csharp": "latest",
+    "@azure-tools/typespec-ts": "latest"
   },
   "private": true
 }
