--- a/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
@@ -41,13 +41,13 @@ npm install --save-peer @azure-tools/typespec-client-generator-core
 ### Decorators
 
 - [`@access`](./decorators.md#@Azure.ClientGenerator.Core.access)
+- [`@apiVersion`](./decorators.md#@Azure.ClientGenerator.Core.apiVersion)
 - [`@client`](./decorators.md#@Azure.ClientGenerator.Core.client)
 - [`@clientInitialization`](./decorators.md#@Azure.ClientGenerator.Core.clientInitialization)
 - [`@clientName`](./decorators.md#@Azure.ClientGenerator.Core.clientName)
 - [`@clientNamespace`](./decorators.md#@Azure.ClientGenerator.Core.clientNamespace)
 - [`@convenientAPI`](./decorators.md#@Azure.ClientGenerator.Core.convenientAPI)
 - [`@flattenProperty`](./decorators.md#@Azure.ClientGenerator.Core.flattenProperty)
-- [`@isApiVersion`](./decorators.md#@Azure.ClientGenerator.Core.isApiVersion)
 - [`@operationGroup`](./decorators.md#@Azure.ClientGenerator.Core.operationGroup)
 - [`@override`](./decorators.md#@Azure.ClientGenerator.Core.override)
 - [`@paramAlias`](./decorators.md#@Azure.ClientGenerator.Core.paramAlias)
