[tcgc] add `@isApiVersion` decorator (#1978)
fixes #1706

cc @jhendrixMSFT 

also, fix some typo for decorator docs.

---------

Co-authored-by: iscai-msft <isabellavcai@gmail.com>
Co-authored-by: tadelesh <tadelesh.shi@live.cn>

--- a/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
@@ -41,6 +41,7 @@ npm install --save-peer @azure-tools/typespec-client-generator-core
 ### Decorators
 
 - [`@access`](./decorators.md#@Azure.ClientGenerator.Core.access)
+- [`@apiVersion`](./decorators.md#@Azure.ClientGenerator.Core.apiVersion)
 - [`@client`](./decorators.md#@Azure.ClientGenerator.Core.client)
 - [`@clientInitialization`](./decorators.md#@Azure.ClientGenerator.Core.clientInitialization)
 - [`@clientName`](./decorators.md#@Azure.ClientGenerator.Core.clientName)
