--- a/.chronus/changes/fix_typo-2024-11-23-15-9-23.md
+++ b/.chronus/changes/fix_typo-2024-11-23-15-9-23.md
@@ -1,7 +1,7 @@
 ---
-changeKind: internal
+changeKind: breaking
 packages:
   - "@azure-tools/typespec-client-generator-core"
 ---
 
-fix typo of `crossLanguageDefinitionId` of method
+fix typo of `crossLanguageDefinitionId` of method.
