--- a/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
@@ -41,6 +41,7 @@ npm install --save-peer @azure-tools/typespec-client-generator-core
 ### Decorators
 
 - [`@access`](./decorators.md#@Azure.ClientGenerator.Core.access)
+- [`@alternateType`](./decorators.md#@Azure.ClientGenerator.Core.alternateType)
 - [`@client`](./decorators.md#@Azure.ClientGenerator.Core.client)
 - [`@clientInitialization`](./decorators.md#@Azure.ClientGenerator.Core.clientInitialization)
 - [`@clientName`](./decorators.md#@Azure.ClientGenerator.Core.clientName)
