--- a/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
@@ -55,3 +55,7 @@ npm install --save-peer @azure-tools/typespec-client-generator-core
 - [`@scope`](./decorators.md#@Azure.ClientGenerator.Core.scope)
 - [`@usage`](./decorators.md#@Azure.ClientGenerator.Core.usage)
 - [`@useSystemTextJsonConverter`](./decorators.md#@Azure.ClientGenerator.Core.useSystemTextJsonConverter)
+
+### Models
+
+- [`ClientInitializationOptions`](./data-types.md#Azure.ClientGenerator.Core.ClientInitializationOptions)
