Add `@scope` decorator (#1998)
Resolves #964

The scope parameter of `@scope` decorator is not working as the normal
decorator.
For a normal decorator, we need to get the decorator value from state
map based on the scope and the current emitter name. If the value hit
from the state map with current emitter name, it's a positive case, if
not hit, it's a negative case.
```
@clientName("Renamed", csharp)
model A;
```
With the normal decorator scope handling, if the decorator is absent it
is a negative case. For the case below, we don't need to handle
`@clientname` decorator, it is a negative case.
```
model A;
```


But for `@scope` decorator, when it is absent, it means `AllScopes`,
which is also a positive case. For below two cases, python emitter
should include this operation, both of them are positive case.
```
op func: void
```
and 
```
@scope("!csharp")
op func: void
```

For incremental applying, the mechanism should be similar to the normal
decorator scope handling.
- for the same scope, the later decorator value wins regardless it's
defined with normal scope or scope negation

--- a/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
@@ -52,5 +52,6 @@ npm install --save-peer @azure-tools/typespec-client-generator-core
 - [`@override`](./decorators.md#@Azure.ClientGenerator.Core.override)
 - [`@paramAlias`](./decorators.md#@Azure.ClientGenerator.Core.paramAlias)
 - [`@protocolAPI`](./decorators.md#@Azure.ClientGenerator.Core.protocolAPI)
+- [`@scope`](./decorators.md#@Azure.ClientGenerator.Core.scope)
 - [`@usage`](./decorators.md#@Azure.ClientGenerator.Core.usage)
 - [`@useSystemTextJsonConverter`](./decorators.md#@Azure.ClientGenerator.Core.useSystemTextJsonConverter)
