Backmerge/release/december 2024 2025 01 06 (#2037)
Co-authored-by: iscai-msft <43154838+iscai-msft@users.noreply.github.com>
Co-authored-by: iscai-msft <isabellavcai@gmail.com>

--- a/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
@@ -42,6 +42,7 @@ npm install --save-peer @azure-tools/typespec-client-generator-core
 
 - [`@access`](./decorators.md#@Azure.ClientGenerator.Core.access)
 - [`@alternateType`](./decorators.md#@Azure.ClientGenerator.Core.alternateType)
+- [`@apiVersion`](./decorators.md#@Azure.ClientGenerator.Core.apiVersion)
 - [`@client`](./decorators.md#@Azure.ClientGenerator.Core.client)
 - [`@clientInitialization`](./decorators.md#@Azure.ClientGenerator.Core.clientInitialization)
 - [`@clientName`](./decorators.md#@Azure.ClientGenerator.Core.clientName)
