--- a/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -47,6 +47,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`@armResourceRead`](./decorators.md#@Azure.ResourceManager.armResourceRead)
 - [`@armResourceUpdate`](./decorators.md#@Azure.ResourceManager.armResourceUpdate)
 - [`@armVirtualResource`](./decorators.md#@Azure.ResourceManager.armVirtualResource)
+- [`@commonTypeDefinition`](./decorators.md#@Azure.ResourceManager.commonTypeDefinition)
 - [`@extensionResource`](./decorators.md#@Azure.ResourceManager.extensionResource)
 - [`@locationResource`](./decorators.md#@Azure.ResourceManager.locationResource)
 - [`@resourceBaseType`](./decorators.md#@Azure.ResourceManager.resourceBaseType)
